Add notes about commit message

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Basic Git Commands</title>
     </head>
     <body>
-        <h3>Git Commands</h3>
+        <h3>Git is a distributed source version control</h3>
+        <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur quaerat reprehenderit error doloribus voluptatibus dolorum autem laudantium consequatur vitae ipsum magnam deleniti pariatur hic eligendi, ratione consectetur nemo modi facere.</h2>
     </body>
 </html>
