--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h3>Git is a distributed source version control</h3>
-        <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur quaerat reprehenderit error doloribus voluptatibus dolorum autem laudantium consequatur vitae ipsum magnam deleniti pariatur hic eligendi, ratione consectetur nemo modi facere.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur quaerat reprehenderit error doloribus voluptatibus dolorum autem laudantium consequatur vitae ipsum magnam deleniti pariatur hic eligendi, ratione consectetur nemo modi facere.</p>
     </body>
 </html>
