Add footer tag in index.html of master branch

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <body>
         <h3>Git is a distributed source version control</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur quaerat reprehenderit error doloribus voluptatibus dolorum autem laudantium consequatur vitae ipsum magnam deleniti pariatur hic eligendi, ratione consectetur nemo modi facere.</p>
+        <footer>
+            footer is a semantic tag
+        </footer>
     </body>
 </html>
